# azure-functions-connectors

./: .gitignore  CONTRIBUTING.md  README.md  connector-trigger-sdk-plan.md  generic-polling-orchestration.md  office365-api-metadata.json  office365-webhook-notes.md  pyproject.toml  setup.py
.github/workflows/: release.yml
docs/: generic.md  gmail.md  google-calendar.md  office365.md  salesforce.md  setup.md  sharepoint.md  teams.md
notes/: graph-http-proxy-limitation.md  salesforce-api-metadata.json  teams-trigger-polling-limitation.md  webhook-listener.js
samples/gmail/: README.md  function_app.py  local.settings.json.template
samples/google-calendar/: README.md  function_app.py  local.settings.json.template
samples/office365/: README.md  function_app.py
samples/office365-email/: README.md  function_app.py  host.json  requirements.txt
samples/salesforce/: README.md
samples/sharepoint/: README.md
samples/teams/: README.md  function_app.py  local.settings.json.template
src/azure/functions/connector_triggers/: _decorator.py  _dynamic_invoke.py  _env.py  _models.py  _poller.py  _processor.py  _registration.py  _state.py
src/azure/functions_connectors/: __init__.py  _decorator.py  _models.py  _poll_action.py  _poller.py  _processor.py  _registration.py  _state.py
src/azure/functions_connectors/_clients/: __init__.py  gmail.py  googlecalendar.py  office365.py  sharepoint.py  teams.py
src/azure/functions_connectors/_triggers/: __init__.py  gmail.py  googlecalendar.py  office365.py  teams.py
